<resources>
    <string name="app_name">ServiceDemo</string>
    <string name="android_services">Services</string>
    <string name="start_service">Start Service</string>
    <string name="stop_service">Stop Service</string>
    <string name="check_it_to_test_responsiveness">Check it to test responsiveness</string>
    <string name="start_intent_service">Start Intent Service</string>
    <string name="started_service_result">Started service result</string>
    <string name="intent_service_result">Intent service result</string>
    <string name="math_result">Math Result</string>
    <string name="add">Add</string>
    <string name="subtract">Subtract</string>
    <string name="multiply">Multiply</string>
    <string name="divide">Divide</string>
    <string name="goto_calculator">Calc Activity</string>
    <string name="number1">number</string>
    <string name="number2">number</string>
    <string name="result">Result</string>
    <string name="add2">Add</string>
    <string name="bind_service">Bind Service</string>
    <string name="unbind_service">Unbind Service</string>
    <string name="bs_activity">Bound serv. Activ</string>
</resources>
