<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.MyMessengerActivity"
    >

    <EditText
        android:id="@+id/edt1"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:ems="10"
        android:inputType="number"
        />

    <EditText
        android:id="@+id/edt2"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:ems="10"
        android:inputType="number"
        />

    <TextView
        android:id="@+id/txtvResult2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edt1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:textSize="20sp"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:text="@string/result" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtvResult2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/add2"
        android:onClick="performAddOperation"
        />

    <Button
        android:id="@+id/btnBind"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnAdd"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:text="@string/bind_service"
        android:onClick="bindService"
        />

    <Button
        android:id="@+id/btnUnbind"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/unbind_service"
        android:layout_below="@+id/btnBind"
        android:layout_centerHorizontal="true"
        android:onClick="unbindService"
        />

</RelativeLayout>