<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.torsh.servicedemo.activities.MyBoundActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">


    <EditText
        android:id="@+id/editText1"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:ems="10"
        android:inputType="number"

        app:layout_constraintRight_toLeftOf="@+id/editText2"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/editText2"
        android:layout_marginEnd="20dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editText2"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="20dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="170dp"
        android:layout_height="40dp"
        android:ems="10"
        android:inputType="number"

        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="16dp" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:text="@string/add"
        android:onClick="onClickEvent"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnSubtract"
        tools:layout_constraintBaseline_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/btnSubtract" />

    <Button
        android:id="@+id/btnSubtract"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:text="@string/subtract"
        android:onClick="onClickEvent"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/editText2"
        android:layout_marginTop="14dp"
        app:layout_constraintTop_toBottomOf="@+id/editText2"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/editText2" />

    <Button
        android:id="@+id/btnMultiply"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:text="@string/multiply"
        android:onClick="onClickEvent"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/btnAdd"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/btnDivide" />

    <Button
        android:id="@+id/btnDivide"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:text="@string/divide"
        android:onClick="onClickEvent"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/btnSubtract"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/btnSubtract"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/btnSubtract"
        app:layout_constraintHorizontal_bias="0.0" />

    <TextView
        android:id="@+id/txtvResult"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:textSize="46sp"
        android:textAlignment="center"
        android:text="@string/math_result"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="0.881" />

</android.support.constraint.ConstraintLayout>